# olmonopolet-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
api/: add_release.ipynb  run.sh
api/api/: asgi.py  authentication.py  settings.py  urls.py  wsgi.py
api/beers/: admin.py  models.py  tasks.py  untappd_lists.py
api/beers/api/: filters.py  serializers.py  urls.py  utils.py  views.py
api/beers/management/commands/: add_release.py  create_badges_custom.py  deactivate_inactive.py  diagnose_apis.py  get_unreleased_beers_from_vmp.py  match_untappd.py  sync_rss_feeds.py  sync_tasted.py  sync_untappd_lists.py  update_beers_from_untappd.py  update_beers_from_vmp.py  update_details_from_vmp.py  update_stock_from_vmp.py  update_stores_from_vmp.py
api/beers/migrations/: 0093_remove_friendlist_friend_remove_friendlist_user_and_more.py  0096_remove_beer_country_old.py  0097_beer_is_christmas_beer.py  0101_tasted_rating.py  0104_userwithlists_userlist_userlistitem.py  0107_untappdrssfeed_userwithcheckins.py  0113_backfill_value_score.py  0116_userlist_feature_flags.py  0118_followed_list.py  0119_vmpcrawlstate_stock_last_seen_in_stock_sync_and_more.py
api/beers/tests/: conftest.py  factories.py  test_settings.py
api/beers/tests/api/: test_filters.py  test_mark_tasted.py  test_views.py
api/beers/tests/commands/: test_update_beers_from_vmp.py
api/beers/tests/models/: test_beer.py
api/beers/tests/tasks/: test_deactivate_inactive.py  test_remove_badges.py  test_update_stock_from_vmp.py
api/beers/tests/utils/: test_checkin_parsing.py
api/beers/tests/vmp/: test_circuit_breaker.py  test_client.py  test_models.py
api/beers/vmp/: __init__.py  circuit_breaker.py  client.py  models.py
api/config/: hosts.py  urls.py
src/: manage.py
src/apikeys/: admin.py  models.py  permissions.py  throttling.py
src/apikeys/migrations/: 0001_initial.py
src/apikeys/tests/: test_apikeys.py
src/beers/: admin.py  models.py  patreon.py  tasks.py  untappd_lists.py
src/beers/api/: filters.py  serializers.py  urls.py  utils.py  views.py
src/beers/management/commands/: create_badges_custom.py  remove_badges.py  (+9 more)
src/beers/migrations/: 0094_country_rename_country_beer_country_old.py  0095_beer_country.py  0098_release_is_christmas_release.py  0099_beer_price_per_alcohol_unit.py  0100_tasted.py  0102_alter_tasted_rating.py  0103_userwithtasted.py  0105_typed_lists.py  0106_untappdcheckin.py  0108_multi_checkin_and_remove_tasted_rating.py  0109_untappd_lists.py  0110_option_value_field.py  0111_untappd_list_wishlist.py  0112_beer_value_score_field.py  0114_untappdlist_sync_task_id.py  0115_store_stock_updated_remove_auto_now.py  0117_add_show_notes_to_userlist.py  0120_beer_vmp_brewery.py  0121_brewery_alter_beer_brewery.py  0122_clean_brewery.py
src/beers/tests/: conftest.py  factories.py  test_settings.py  test_untappd_lists.py
src/beers/vmp/: __init__.py  client.py  commands.py  models.py
src/config/: settings.py
(+13 files in other folders)
